deployments/injector/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-call-webhook
spec:
  podSelector: {}
  ingress:
    - ports:
        - protocol: TCP
          port: 8443
      from:
        - namespaceSelector:
            matchLabels:
              inject: custom-pki
  policyTypes:
    - Ingress
