deployments/injector/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: custom-ca-injector-pki
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: custom-ca-injector
      namespace: custom-ca-injector
      path: /mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: custompki.openshift.io
  namespaceSelector:
    matchLabels:
      inject: custom-pki
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
